Conexiones de clases view terminadas

--- a/Minerva/src/minerva/view/panel/NuevaVentaPanel.form
+++ b/Minerva/src/minerva/view/panel/NuevaVentaPanel.form
@@ -50,8 +50,8 @@
         <Container class="javax.swing.JPanel" name="panel_1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="tab1">
-                <Property name="tabTitle" type="java.lang.String" value="tab1"/>
+              <JTabbedPaneConstraints tabName="NuevaVenta">
+                <Property name="tabTitle" type="java.lang.String" value="NuevaVenta"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
