--- a/Minerva/src/minerva/view/panel/PanelNuevaVenta.form
+++ b/Minerva/src/minerva/view/panel/PanelNuevaVenta.form
@@ -60,12 +60,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="VendedorLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="vendedorUsuarioTextField" min="-2" pref="209" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="ClienteLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="nombreClienteTextField" alignment="0" min="-2" pref="262" max="-2" attributes="0"/>
@@ -124,17 +119,13 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="VendedorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="stockLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="ClienteLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Group type="102" attributes="0">
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="nombreClienteTextField" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="vendedorUsuarioTextField" alignment="0" max="32767" attributes="0"/>
-                                      </Group>
+                                      <Component id="nombreClienteTextField" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
                                       <EmptySpace max="32767" attributes="0"/>
@@ -181,14 +172,6 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="VendedorLabel">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Roboto" size="12" style="1"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Vendedor"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JLabel" name="ClienteLabel">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -376,13 +359,6 @@
                   <Font name="Roboto" size="12" style="1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Cantidad"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="vendedorUsuarioTextField">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Roboto" size="12" style="1"/>
-                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="stockTextField">
